Add login to swagger
